--- a/avance1.bib
+++ b/avance1.bib
@@ -206,18 +206,6 @@ mendeley-tags = {FormalConceptAnalysis,Investigaci\'{o}nRelacionada,RecommenderS
 title = {{An ontology-based document recommendation system: design, implementation, and evaluation}},
 year = {2008}
 }
-@book{Segaran2007,
-address = {Sebastopol, Ca; EEUU},
-author = {Segaran, T.},
-edition = {1},
-editor = {{Treselet O'Brien}, Mary},
-file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/OReilly.Programming.Collective.Intelligence.Aug.2007.9780596529321.pdf:pdf},
-isbn = {0-596-52932-5},
-publisher = {O'Reilly},
-title = {{Programming collective intelligence}},
-url = {http://portal.acm.org/citation.cfm?id=1406354},
-year = {2007}
-}
 @inproceedings{PuertaMelquizo2007,
 annote = {Ac\'{a} habla de las cosas a tener en cuenta en un sistema recomendador: no interferir con el usuario, etc.
       },
@@ -230,4 +218,15 @@ pages = {86--91},
 publisher = {Set\'{u}bal, INSTICC},
 title = {{What a proactive recommendation system needs: relevance, non-intrusiveness and a new long-term memory}},
 year = {2007}
+}
+@inproceedings{Fleischman2003,
+author = {Fleischman, M. and Hovy, E.},
+booktitle = {Proceedings of the 8th international conference on Intelligent user interfaces},
+file = {:home/lfborjas/Lebrixen/Fase\_I/Bibliografia/Miscelanea/RecommendationsWithoutUserPrefs.pdf:pdf},
+keywords = {1,algorithm that,and,genre,imdb,keywords,most importantly,movie database,this system advertises an,title,user recommendations,user votes,uses factors such as},
+pages = {242-244},
+publisher = {ACM New York, NY, USA},
+title = {{Recommendations without user preferences: a natural language processing approach}},
+url = {http://portal.acm.org/citation.cfm?id=604045.604087},
+year = {2003}
 }
