--- a/bibtex_references/Zotero - Lebrixen.bib
+++ b/bibtex_references/Zotero - Lebrixen.bib
@@ -6,7 +6,7 @@ author = {Gelbukh, A. and Sidorov, G. and Guzm\'{a}n-Arenas, A.},
 file = {:home/lfborjas/Lebrixen/Fase\_I/Bibliografia/Miscelanea/DocumentIndexingConceptHierarchy.pdf:pdf},
 journal = {Computaci\'{o}n y Sistemas},
 number = {4},
-pages = {281–292},
+pages = {281--292},
 title = {{Document indexing with a concept hierarchy}},
 url = {http://scielo.unam.mx/pdf/cys/v8n4/v8n4a3.pdf},
 volume = {8},
