--- a/bibtex_references/ReferenciasFaseI.bib
+++ b/bibtex_references/ReferenciasFaseI.bib
@@ -155,6 +155,18 @@ title = {{AI SEARCH: Category Formation of Web Search Results}},
 url = {http://www.uni-weimar.de/cms/medien/webis/research/projects/aisearch.html},
 year = {2003}
 }
+@article{Cohen1999,
+author = {Cohen, W.W. and Singer, Y.},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/10.1.1.14.6535.pdf:pdf},
+journal = {ACM Transactions on Information Systems (TOIS)},
+number = {2},
+pages = {141--173},
+publisher = {ACM New York, NY, USA},
+title = {{Context-sensitive learning methods for text categorization}},
+url = {http://portal.acm.org/citation.cfm?id=306688\&amp;dl=GUIDE,},
+volume = {17},
+year = {1999}
+}
 @article{Voorhees2002a,
 author = {Voorhees, E.M.},
 file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/10.1.1.7.7360.pdf:pdf},
@@ -400,4 +412,41 @@ mendeley-tags = {WikiversityRecommended},
 pages = {84--88},
 title = {{Personalization and Recommender Systems in the Larger Context: New Directions and Research Questions}},
 year = {2001}
+}
+@inproceedings{Schein2002,
+abstract = {We have developed a method for recommending items that combines content and collaborative data under a single probabilistic framework. We benchmark our algorithm against a nave Bayes classifier on the cold-start problem, where we wish to recommend items that no one in the community has yet rated. We systematically explore three testing methodologies using a publicly available data set, and explain how these methods apply to specific real-world applications. We advocate heuristic recommenders when benchmarking to give competent baseline performance. We introduce a new performance metric, the CROC curve, and demonstrate empirically that the various components of our testing strategy combine to obtain deeper understanding of the performance characteristics of recommender systems. Though the emphasis of our testing is on cold-start recommending, our methods for recommending and evaluation are general.},
+author = {Schein, Andrew I. and Popescul, Alexandrin and H., Lyle and Popescul, Rin and Ungar, Lyle H. and Pennock, David M.},
+booktitle = {In Proceedings of the 25th Annual International ACM SIGIR Conference on Research and Development in Information Retrieval},
+doi = {10.1.1.19.436},
+file = {:home/lfborjas/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Schein et al. - 2002 - Methods and Metrics for Cold-Start Recommendations.pdf:pdf},
+pages = {253--260},
+publisher = {ACM Press},
+title = {{Methods and Metrics for Cold-Start Recommendations}},
+url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.19.436},
+year = {2002}
+}
+@article{Salton1975,
+author = {Salton, G. and Wong, a. and Yang, C. S.},
+doi = {10.1145/361219.361220},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/A Vector Space Model for Automatic Indexing - p613-salton.pdf:pdf},
+issn = {00010782},
+journal = {Communications of the ACM},
+keywords = {and phrases,automatic indexing,automatic information,content analysis,document,retrieval},
+month = {noviembre},
+number = {11},
+pages = {613--620},
+title = {{A vector space model for automatic indexing}},
+url = {http://portal.acm.org/citation.cfm?doid=361219.361220},
+volume = {18},
+year = {1975}
+}
+@article{Kitamura2002,
+author = {Kitamura, Y. and Sakamoto, T. and Tatsumi, S.},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/10.1.1.109.2024.pdf:pdf},
+journal = {Lecture notes in computer science},
+pages = {138--151},
+publisher = {Springer},
+title = {{A competitive information recommendation system and its behavior}},
+url = {http://www.springerlink.com/index/W2EQKX8AQUM64H6V.pdf},
+year = {2002}
 }
